--- a/_posts/2016-05-01-somfy.markdown
+++ b/_posts/2016-05-01-somfy.markdown
@@ -135,7 +135,7 @@ A central hub (also a tangible user interface) acts as the learner of user behav
   </video>
 </div>
 
-
+The app serves as an access point to configure settings, routines, and add other devices into Presense. The design intent is for users to use the app as few times as possible and leave Presense TUI do all the work.
 
 [chain]: assets/somfy/chain.png
 [project framework]: assets/somfy/framework.png
