--- a/_posts/2016-05-01-somfy.markdown
+++ b/_posts/2016-05-01-somfy.markdown
@@ -1,11 +1,12 @@
 ---
 layout: post
-title:  "Somfy IoT"
+title:  "Redefining IoT"
 date:   2016-05-01 18:03:21 -0500
-categories: somfy iot work design thinking strategy
+categories: cognitive social psychology IoT machine learning
+tags: work
 image-url: "/assets/somfy/banner.png"
 selection-color: "#b1fff4"
-description: "Somfy: Lorem ipsum dolor sit amet, consectitur"
+description: "My team thought about IoT from the perspective of how humans benefit psychologically from technology and designed a fullstack solution for Somfy."
 ---
 
 [approach](#approach)<br>
