--- a/_posts/2015-12-20-vibram.markdown
+++ b/_posts/2015-12-20-vibram.markdown
@@ -4,7 +4,8 @@ title:  "Rebranding Vibram for China"
 date:   2015-12-20 00:00:00 -0500
 categories: east meets west branding culture values
 tags: work
-image-url: "/assets/vibram/banner2.png"
+image-url: "/assets/vibram/banner.jpg"
+
 selection-color: "#f9ec00"
 description: "How would a Western brand’s values be communicated in a different culture? How would its values change?"
 ---
